# DeepMidi

./: .gitignore  README.md  pyproject.toml
data/: auto_regression_preprocess.py  note_digitize.py  note_encoder.py  note_vectorize.py  preprocess.py
test/: generate.py  sound.py
train/: classical_ignore_octave_train.ipynb  deepmidi_train.ipynb  midi-classical-music_train.ipynb
