[project]
name = "deepmidi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "deeplotx>=0.4.15",
    "jupyter>=1.1.1",
    "midiutil>=1.2.1",
    "mido>=1.3.3",
    "music21>=9.7.1",
    "pip>=25.1.1",
    "pygame>=2.6.1",
    "python-rtmidi>=1.5.8",
    "requests>=2.32.4",
    "tensorboard>=2.19.0",
    "vortezwohl>=0.0.2",
]
